--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,8 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.11.0'
-    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.18.0-rc1'
+    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version: '2.17.2'
+    implementation group: 'com.fasterxml.woodstox', name: 'woodstox-core', version: '7.0.0'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
